[project]
name = "flashcards-md"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anki>=25.9.2",
    "bs4>=0.0.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-markdown>=0.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
python_files="**/*.py"
